polished mod for release